DONE: fixed opacity class on dish visibility

--- a/resources/sass/layouts/dashboard-layout.scss
+++ b/resources/sass/layouts/dashboard-layout.scss
@@ -93,6 +93,10 @@
                 list-style: none;
                 margin-top: 30px;
 
+                .not-visible{
+                    opacity: .3;
+                }
+
                 li{
 
                     .flex-container{
